package thesis.project.classes;

public enum SuitName {
    SPADES,
    HEARTS,
    DIAMONDS,
    CLUBS,
    NOTRUMP
}
